check_PROGRAMS = calcexample simplexml xml calc1 calc2 micro

calcexample_SOURCES = calcexample.cpp

simplexml_SOURCES = simplexml.cpp

xml_SOURCES = xml.cpp

calc1_SOURCES = calc1.cpp

calc2_SOURCES = calc2.cpp

micro_SOURCES = micro.cpp

EXTRA_DIST = \
calc1.1.output \
calc1.output

INCLUDES = -I$(top_srcdir)
